...
            android:gravity="center_vertical"
            android:text="Facility Name:"
            android:textSize="20sp"
            android:textColor="@color/space_cadet"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_facility_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:hint="Required"
            android:textColorHint="@color/white"
...

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Location:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_location"
            android:hint="Required"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
...
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Phone Number:" />
        <EditText
            android:id="@+id/facility_details_edittext_phone_number"
            android:hint="Optional"
            android:maxLines="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
...
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Email Address:"/>
        <EditText
            android:id="@+id/facility_details_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"
...
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_capacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:inputType="number"
...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <Button
            android:id="@+id/facility_details_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm"
            android:textColor="@color/black"
            android:backgroundTint="@color/green1"
            app:layout_constraintBottom_toBottomOf="parent"
...
