<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fProfile"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/fNameEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:hint="Enter your first name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
...
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fNameEditText" />

        <EditText
            android:id="@+id/lNameEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your last name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
...
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lNameEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your phone number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="phone"
...
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your email address"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />


        <Button
            android:id="@+id/saveProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/indigo"
            android:text="Edit Profile"
            android:textColor="@color/black"
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/admin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="5dp"
...
