<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@drawable/rounded_corner_background"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title Text -->

        <TextView
            android:id="@+id/facility_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="Facility Details"
            android:textColor="@android:color/black"

            android:textSize="30sp" />

        <!-- Facility Name -->
        <TextView
            android:id="@+id/facility_details_text_facility_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Facility's name here"
            android:textColor="@android:color/black"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/facility_details_text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Address of facility"
            android:textColor="@android:color/black"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/facility_details_text_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Phone Number (Optional)"
            android:textColor="@android:color/black"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/facility_details_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Email address"
            android:textColor="@android:color/black"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/facility_details_text_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="Max number of people allowed"
            android:textColor="@android:color/black"

            android:textSize="20sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darkRed"
                android:textSize="15sp"
                android:text="Delete"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="2.5dp"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:backgroundTint="@color/darkRed"
                android:text="Cancel"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="2.5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>