<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--
    https://stackoverflow.com/questions/59047389/onclick-using-databinding-in-fragment
    https://stackoverflow.com/questions/32815608/android-data-binding-cannot-resolve-symbol
    -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Event's Settings"
        android:textColor="@color/space_cadet"
        android:layout_marginVertical="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:minWidth="150dp"
            android:text="Event Capacity:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/create_event_edittext_event_capacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:inputType="number"
            android:hint="Event capacity here"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Waiting List Limit (Optional):"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/create_event_edittext_event_waitlist_limit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:hint="Waitlist limit here"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"
            android:maxLines="1" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:minWidth="150dp"
            android:text="Location:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_event_edittext_event_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:hint="Location here"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/indigo"

            android:paddingHorizontal="10dp"
            android:maxLines="1" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:minWidth="150dp"
            android:text="Geolocation Required:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/create_event_switch_geolocation_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:minWidth="150dp"
            android:text="Join Deadline:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- https://youtu.be/qCoidM98zNk?si=ywcwpfPe0MzQRhzm -->
        <Button
            android:id="@+id/create_event_join_deadline_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="0dp"
            android:backgroundTint="@color/gray2"
            android:textColor="@color/black"
            style="?android:spinnerStyle"
            android:maxLines="1" />
    </LinearLayout>




</LinearLayout>